// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanPrice allows class name overriding 1`] = `
<span>
  <span
    className="abcd-class"
  >
    <strong>
      50,000
    </strong>
     emails/month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders correctly 1`] = `
<span>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails/month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders correctly for free plan 1`] = `
<span>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails/month
     for Free
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders correctly with hourly plans 1`] = `
<span>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails/month
    <span>
       at 
      <strong>
        $
        0.012
      </strong>
      /
      hr
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders free ip 1`] = `
<span>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails/month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  >
    First dedicated IP address is free
  </span>
</span>
`;

exports[`PlanPrice renders free ip and overage correct 1`] = `
<span>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails/month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  >
    $0.75/ thousand extra emails. 
    First dedicated IP address is free
  </span>
</span>
`;

exports[`PlanPrice renders nothing when no plan 1`] = `""`;

exports[`PlanPrice renders with overage 1`] = `
<span>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails/month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  >
    $0.75/ thousand extra emails. 
  </span>
</span>
`;
